--- a/machine.html
+++ b/machine.html
@@ -117,11 +117,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://neya.applytojob.com/apply/YsWil26rKg/Machine-Learning-And-Computer-Vision-Engineer-multiple-Levels'>Machine Learning and Computer Vision Engineer (multiple levels) - Neya Systems LLC - Career Page</a></h5> 
+<h5><a href='http://neya.applytojob.com/apply/YsWil26rKg/Machine-Learning-And-Computer-Vision-Engineer-multiple-Levels'>Machine Learning and Computer Vision Engineer (multiple levels) - Neya Systems LLC - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://so1.join.com/jobs/443932-senior-machine-learning-engineer-m-f-x'>Job @ SO1 (Berlin): Senior Machine Learning Engine... | JOIN</a></h5> 
+<h5><a href='https://so1.join.com/jobs/443932-senior-machine-learning-engineer-m-f-x'>Job @ SO1 (Berlin): Senior Machine Learning Engine... | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -218,7 +218,7 @@ learning and computer vision to join our team.</p>
 <p><span class="badge badge-light">France</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://apply.workable.com/warungpintar/j/C05DD39936/'>Machine Learning Engineer - Warung Pintar</a></h5> 
+<h5><a href='https://apply.workable.com/warungpintar/j/C05DD39936/'>Machine Learning Engineer - Warung Pintar</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>5 days ago ... Familiar in using common algorithms (SVM, Naive Bayes, Random Forest) and 
 Deep Learning (Linear, CNN, GRU, LSTM, Attention, Transformer), etc.</p>
@@ -235,7 +235,7 @@ Deep Learning (Linear, CNN, GRU, LSTM, Attention, Transformer), etc.</p>
 <p><span class="badge badge-light">Seattle, WA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/aedit/jobs/4492550002'>Job Application for Machine Learning/Computer Vision Software Engineer at AEDIT</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/aedit/jobs/4492550002'>Job Application for Machine Learning/Computer Vision Software Engineer at AEDIT</a></h5> 
 <p><span class="badge badge-light">New York</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -356,7 +356,7 @@ healthcare?...</p>
 <p>Oct 8, 2019 ... At Blueground, our vision is to make people feel at home wherever they choose 
 to live.To do this, we offer beautifully furnished and thoughtfully-equipped?...</p>
 <hr/>
-<h5><a href='https://neimanmarcus.referrals.selectminds.com/jobs/machine-learning-engineer-12731'>Machine Learning Engineer - Neiman Marcus Group Careers Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://neimanmarcus.referrals.selectminds.com/jobs/machine-learning-engineer-12731'>Machine Learning Engineer - Neiman Marcus Group Careers Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
@@ -378,7 +378,7 @@ to live.To do this, we offer beautifully furnished and thoughtfully-equipped?...
 Cambridge; Senior Manager, Outbound Marketing, ML San Jose (CA); Senior 
 Product?...</p>
 <hr/>
-<h5><a href='https://tensor-tech.join.com/jobs/449941-machine-learning-engineer'>Machine Learning ... | JOIN - Job @ Tensor Technologies (Zug)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://tensor-tech.join.com/jobs/449941-machine-learning-engineer'>Machine Learning ... | JOIN - Job @ Tensor Technologies (Zug)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>2 days ago ... I agree with the JOIN Terms & Conditions and Data Privacy Policy. APPLY FOR 
 THIS JOB. Already applied? Check the status of your application. Share this job:.</p>
@@ -434,7 +434,7 @@ ML;?...</p>
 <p><span class="badge badge-light">Zug, Switzerland</span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/loftium/84835383-cd2f-41cb-9fcf-7115f488f8b2'>Loftium - Machine Learning Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/loftium/84835383-cd2f-41cb-9fcf-7115f488f8b2'>Loftium - Machine Learning Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 11, 2019 ... Machine Learning Engineer. Seattle, WA. Engineering ? Machine Learning. Full-
 time. Apply for this job. Loftium is a Seattle-based, fast-growing start-up that?...</p>
@@ -489,7 +489,7 @@ time. Apply for this job. Loftium is a Seattle-based, fast-growing start-up that
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-10-20</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/bluerivertech/jobs/1923186'>Job Application for Computer Vision Machine Learning - Software Engineer at Blue River Technology</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/bluerivertech/jobs/1923186'>Job Application for Computer Vision Machine Learning - Software Engineer at Blue River Technology</a></h5> 
 <p><span class="badge badge-light">Sunnyvale  ?  Sunnyvale, CA</span></p>
 <p>Posted on: 2019-10-20</p>
 <hr/>
