--- a/web-developer.html
+++ b/web-developer.html
@@ -38,16 +38,20 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://jobs.smartrecruiters.com/IntegrityWebConsulting/743999698684503-senior-web-developer'>Integrity Web Consulting Senior Web Developer | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
 <h5><a href='https://oyorooms.recruiterbox.com/jobs/fk03o21/'>
     Web Development Engineer at OYO
 </a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Bengaluru Bangalore</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
 <h5><a href='https://oyorooms.recruiterbox.com/jobs/fk03ov1/'>
     Web Development Engineer - Global Homes & Vacations  at OYO
 </a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Bengaluru Malaysia</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
 <h5><a href='https://www.ccnm.edu/connect-with-us/careers/web-developer?utm_source=Facebook&utm_medium=post&utm_campaign=CCNM-hiring-web-develop-November-15-2019&utm_content=CCNM-hiring-web-develop-November-15-2019'>Web Developer | CCNM</a></h5> 
@@ -58,7 +62,7 @@
 <p><span class="badge badge-light">Lehi, UT, USA</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://brainstation.applytojob.com/apply/nKAse66bYq/Senior-Web-Developer'>Senior Web Developer - BrainStation - Career Page</a></h5> 
+<h5><a href='http://brainstation.applytojob.com/apply/nKAse66bYq/Senior-Web-Developer'>Senior Web Developer - BrainStation - Career Page</a></h5> 
 <p><span class="badge badge-light">Toronto, ON, Canada</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -160,11 +164,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Broadsign2/743999698579843-front-end-web-developer-intern'>Broadsign Front End Web Developer Intern | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Broadsign2/743999698579843-front-end-web-developer-intern'>Broadsign Front End Web Developer Intern | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://sportradar.join.com/jobs/471533-junior-web-developer-m-f'>Job @ 1991 (Vienna): Junior Web Developer (m/f) | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://sportradar.join.com/jobs/471533-junior-web-developer-m-f'>Job @ 1991 (Vienna): Junior Web Developer (m/f) | JOIN</a></h5> 
 <p><span class="badge badge-light">Vienna Vienna</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -184,7 +188,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://ticketino.join.com/jobs/464054-senior-web-developer-net'>Job @ TICKETINO (Z?rich): Senior Web Developer .NET | JOIN</a></h5> 
+<h5><a href='https://ticketino.join.com/jobs/464054-senior-web-developer-net'>Job @ TICKETINO (Z?rich): Senior Web Developer .NET | JOIN</a></h5> 
 <p><span class="badge badge-light">Z?rich, Switzerland</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -355,11 +359,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/GlobeAir/743999698356722-web-developer'>GlobeAir WEB DEVELOPER | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/GlobeAir/743999698356722-web-developer'>GlobeAir WEB DEVELOPER | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/KSMConsulting/743999698268852-senior-web-developer'>KSM Consulting Senior Web Developer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/KSMConsulting/743999698268852-senior-web-developer'>KSM Consulting Senior Web Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Indianapolis, IN</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -437,7 +441,7 @@ Develop process requirements and implement product development and release
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<h5><a href='https://dedeleads.com/job/world-travel-holdings-looking-for-junior-web-applications-developer/'>World Travel Holdings looking for Junior Web Applications Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://dedeleads.com/job/world-travel-holdings-looking-for-junior-web-applications-developer/'>World Travel Holdings looking for Junior Web Applications Developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -451,10 +455,6 @@ Develop process requirements and implement product development and release
 <hr/>
 <h5><a href='https://jobs.jobvite.com/silver-peak/job/o3w1afwu'>Silver Peak Systems Careers - Senior Web Application Developer</a></h5> 
 <p><span class="badge badge-light">Bangalore, India</span></p>
-<p>Posted on: 2019-10-27</p>
-<hr/>
-<h5><a href='https://interactive-tools.join.com/jobs/455622-web-developer-typo3-w-m-d'>Job @ interactive tools   (Berlin): Web Developer ... | JOIN</a></h5> 
-<p><span class="badge badge-light">Berlin Berlin, Deutschland  Berlin</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
 
